--- a/app/src/main/res/layout-land/note_activity.xml
+++ b/app/src/main/res/layout-land/note_activity.xml
@@ -59,6 +59,7 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:contentDescription="@string/description_voice_speak"
                             android:src="@android:drawable/ic_btn_speak_now"/>
                 </LinearLayout>
                 <LinearLayout
