--- a/app/src/main/res/layout/main_app_bar.xml
+++ b/app/src/main/res/layout/main_app_bar.xml
@@ -31,6 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_refresh_black_24dp"
+                android:contentDescription="@string/description_main_reload"
                 android:background="@color/colorPrimary"
                 android:layout_gravity="end"
                 android:layout_margin="3dp"/>
