--- a/app/src/main/res/layout/mark_year_activity.xml
+++ b/app/src/main/res/layout/mark_year_activity.xml
@@ -28,7 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:itemIcon="@drawable/ic_event_note_black_24dp"
-            app:listItemBackground="@drawable/listview_background"/>
+            app:listItemBackground="@drawable/listview_background"
+            android:contentDescription="@string/description_main_year_list"/>
 
     </FrameLayout>
 
