--- a/app/src/main/res/layout/note_activity.xml
+++ b/app/src/main/res/layout/note_activity.xml
@@ -29,6 +29,7 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/svControls"
             app:itemIcon="@drawable/ic_note_black_24dp"
+            android:contentDescription="@string/description_main_notes_list"
             app:listItemBackground="@drawable/listview_background"/>
 
         <ScrollView
@@ -59,6 +60,7 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:contentDescription="@string/description_voice_speak"
                             android:src="@android:drawable/ic_btn_speak_now"/>
                 </LinearLayout>
                 <EditText
