--- a/app/src/main/res/layout/timer_activity.xml
+++ b/app/src/main/res/layout/timer_activity.xml
@@ -62,7 +62,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:layout_margin="8dp"/>
+            android:layout_margin="8dp"
+            android:contentDescription="@string/timetable_assistant_add"/>
 
 
 
