--- a/app/src/main/res/layout/whats_new_activity.xml
+++ b/app/src/main/res/layout/whats_new_activity.xml
@@ -51,6 +51,7 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"
+        android:contentDescription="@string/app_name"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
